KCompressionDevice: propagate errors from QIODevice::close()

BUG: 397545

Summary:
QFile::close() doesn't return a value, but sets an error string instead,
we need to check for that and set it in KCompressionDevice so apps can check for that in turn.

Test Plan:
Saving into /tmp/mnt/test.gz with kate, with the setup described in
https://phabricator.kde.org/D14890

Reviewers: cullmann

Reviewed By: cullmann

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D14913